sistema de localização local (LPS)
Agente que cria um mapa com coordenadas absolutas conforme a percepção.
O ponto 0,0 é onde ele nasce.
artefato localPositionSystem.LPS é apenas para visualizar a construção do mapa.